--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,17 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
 		</dependency>
+		
+		<!-- 整合消息队列ActiveMQ -->
+		<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-activemq</artifactId>
+		</dependency>
+		<!-- 如果配置线程池则加入 -->
+		<dependency>
+		<groupId>org.apache.activemq</groupId>
+		<artifactId>activemq-pool</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
